fix: update dark mode annotation highlighting

--- a/src/css/_global.scss
+++ b/src/css/_global.scss
@@ -8,7 +8,7 @@
   }
 }
 
-.body--dark {
+body.body--dark {
   color: $light;
 }
 
@@ -67,71 +67,91 @@ h3 {
   background-color: $grey-3;
 
   @media (prefers-color-scheme: dark) {
-    background-color: $grey-8;
+    background-color: #575757 !important;
   }
 
   .body--dark & {
-    background-color: $grey-7;
+    background-color: #575757 !important;
   }
 }
 
 [data-annotation-level='1'],
 [data-annotation-level='1'] * {
   background-color: $blue-1;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid $dark;
+
+  .body--dark & {
+    background-color: #8194a6 !important;
+    border-bottom: 1px solid $light !important;
+  }
 
   @media (prefers-color-scheme: dark) {
-    background-color: $blue-grey-7;
-    border-bottom: 1px solid #fff;
-    color: $light;
+    background-color: #6790bf !important;
+    border-bottom: 1px solid $light !important;
   }
 }
 
 [data-annotation-level='2'],
 [data-annotation-level='2'] * {
   background-color: $blue-2;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid $dark;
+
+  .body--dark & {
+    background-color: #5687bf !important;
+    border-bottom: 1px solid $light !important;
+  }
 
   @media (prefers-color-scheme: dark) {
-    background-color: $blue-grey-8;
-    border-bottom: 1px solid #fff;
-    color: $light;
+    background-color: #5687bf !important;
+    border-bottom: 1px solid $light !important;
   }
 }
 
 [data-annotation-level='3'],
 [data-annotation-level='3'] * {
-  background-color: $blue-3;
-  border-bottom: 1px solid #000;
+  background-color: $blue-6;
+  border-bottom: 1px solid $dark;
+
+  .body--dark & {
+    background-color: #4b81bf !important;
+    border-bottom: 1px solid $light !important;
+  }
 
   @media (prefers-color-scheme: dark) {
-    background-color: $blue-grey-9;
-    border-bottom: 1px solid #fff;
-    color: $light;
+    background-color: #4b81bf !important;
+    border-bottom: 1px solid $light !important;
   }
 }
 
 [data-annotation-level='4'],
 [data-annotation-level='4'] * {
-  background-color: $blue-4;
+  background-color: $blue-9;
   border-bottom: 1px solid #000;
 
+  .body--dark & {
+    background-color: #3073bf !important;
+    border-bottom: 1px solid $light !important;
+  }
+
   @media (prefers-color-scheme: dark) {
-    background-color: $blue-grey-10;
-    border-bottom: 1px solid #fff;
-    color: $light;
+    background-color: #3073bf !important;
+    border-bottom: 1px solid $light !important;
   }
 }
 
 [data-annotation-level='5'],
 [data-annotation-level='5'] * {
   background-color: $blue-5;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid $dark;
+
+  .body--dark & {
+    background-color: #1a5fad !important;
+    border-bottom: 1px solid $light;
+  }
 
   @media (prefers-color-scheme: dark) {
-    background-color: #1f2937;
-    border-bottom: 1px solid #fff;
-    color: $light;
+    background-color: #1a5fad !important;
+    border-bottom: 1px solid $light !important;
   }
 }
 
